# Cash-Sloth-V2

./: .gitattributes  .gitignore  CMakeLists.txt  CashSloth.sln  Directory.Build.props  LICENSE  NuGet.Config  README.md
.dotnet-home/.dotnet/: 10.0.103_MachineId.dotnetUserLevelCache  MachineId.v1.dotnetUserLevelCache
.dotnet-home/.dotnet/TelemetryStorageService/: 20260305135729_122d906ea31c46b585ddc4da5a5281b2.trn  20260305135729_5cd8ac95beea43469a8cc68ff26d1fde.trn  20260305135729_bae60b688b5c45ac87112de1b0a56c7f.trn  20260305135730_380acf0afc48469cae4f160f5371563f.trn  20260305135730_c2e10992fb9e4968a62da58f0ba87ee2.trn  20260306115027_c61cdfc0d8bd4fdc82a077c5ba0bf814.trn  20260306115035_86da289680394038bb03b025a96b3c3e.trn  20260306115035_90c7ad4a977643cd93eadd24cd167895.trn  20260306134826_953f4eb6bd8a4e97b050fb6e13c34ede.trn  20260306134834_2047813c3bea43fc992bfaf92a17f250.trn  20260306134834_3d4ba301703a4ab3b49a3788706cc407.trn  20260306134834_62b2266f24dc411ab2ef3b93b484632d.trn
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore_task.yml  feature_request.yml  refactor_task.yml
.github/workflows/: ci.yml  release.yml
docs/: ABI.md  AUGUST_PERSISTENCE_KICKOFF.md  MILESTONES.md  QEN_GV_MVP_ACCEPTANCE_CHECKLIST.md  QEN_GV_RELEASE_REHEARSAL_CHECKLIST.md  README.md  ROADMAP.md
docs/issues/: A_core_cart_json_contract.md  B_core_demo_catalog_strategy.md  C_wpf_pos_mainwindow_mvp.md  D_wpf_customer_display.md  E_copy_core_dll_to_wpf_output.md  F_mvp_acceptance_checklist.md
src/CashSloth.App/: App.xaml  App.xaml.cs  AssortmentPresetStore.cs  AssortmentSqliteStore.cs  AuthSqliteStore.cs  CartModels.cs  CashSloth.App.csproj  CustomerDisplayWindow.xaml  CustomerDisplayWindow.xaml.cs  FxRateProvider.cs  InternalVisibility.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  OnlinePresetProvider.cs  README.md  RuntimeTranslator.cs  SaleHistorySqliteStore.cs  UiSettings.cs
src/CashSloth.Core/: CMakeLists.txt  README.md
src/CashSloth.Core/include/: cashsloth_core.h
src/CashSloth.Core/src/: core.cpp
src/CashSloth.CoreApi/: README.md
src/CashSloth.PresetApi/: PresetRepository.cs  Program.cs  README.md
tests/CashSloth.App.Tests/: AssortmentPresetStoreTests.cs  AuthSqliteStoreTests.cs  CashSloth.App.Tests.csproj  OnlinePresetProviderTests.cs  README.md  SaleHistorySqliteStoreTests.cs
tests/CashSloth.Core.Tests/: CMakeLists.txt  README.md  cart_contract_test.cpp  catalog_contract_test.cpp  payment_contract_test.cpp  version_contract_test.cpp
tools/: clean_local_artifacts.ps1
tools/github/: apply_github_setup.ps1  apply_github_setup.sh  issues_august.json  issues_qen_gv.json  labels.json  milestones.json
